добавлен функционал выдачи токенов, регистрации и аутентификации, правки

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,3 +13,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+jwt:
+  secret: jOu4scZUwu34BLGxZQWXAakYRVb62dyRi8tMC66wAlA=
+  lifetime: 30m
